--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -74,7 +74,7 @@
       align-items: center;
       border: none;
       display: flex;
-      height: 3rem;
+      height: 4rem;
       width: 10rem;
     }
     
